# duplicate

./: pyproject.toml
duplicate/: __main__.py  main.py
tests/: test_duplicate.py
