[tool.poetry]
name = "duplicate"
version = "0.1.6"
description = ""
authors = ["chenn <chenn@gisuni.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
duplicate = 'duplicate.main:cli'